kubernetes/ingress.in.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kompassi
  annotations: !Var ingress_annotations
spec:
  tls: !Var ingress_tls
  rules: !Loop
    over: !Var ingress_public_hostnames
    as: hostname
    template:
      host: !Var hostname
      http:
        paths:
          - path: /static
            backend:
              serviceName: nginx
              servicePort: 80
          - path: /media
            backend:
              serviceName: nginx
              servicePort: 80
          - path: /
            backend:
              serviceName: kompassi
              servicePort: 8000
