kubernetes/ingress.in.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kompassi
  annotations: !Var ingress_annotations
spec:
  tls: !Var ingress_tls
  rules:
    - host: !Var ingress_public_hostname
      http:
        paths:
          - path: /admin
            backend:
              serviceName: kompassi
              servicePort: 8000
          - path: /api
            backend:
              serviceName: kompassi
              servicePort: 8000
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
